# sphinx-changelog

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml
changelog/: 1.feature.rst  10.bugfix.rst  11.bugfix.rst  12.bugfix.rst  17.feature.rst  20.feature.rst  21.bugfix.rst  23.breaking.1.rst  23.breaking.rst  3.bugfix.rst  5.bugfix.rst  6.bugfix.rst  6.feature.rst  8.bugfix.rst  9.feature.1.rst  9.feature.rst  dummy  template.rst
docs/: conf.py  index.rst  test_changelogs.rst
licenses/: LICENSE.rst
sphinx_changelog/: __init__.py  directive.py  towncrier.py
