[metadata]
name = sphinx_changelog
author = SunPy and OpenAstronomy Developers
author_email = stuart@cadair.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://openastronomy.org
description = A changelog renderer for sphinx.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
  sphinx
  towncrier>=22.8.0

[options.extras_require]
all =
test =
    pytest
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "sphinx_changelog" "docs"

[coverage:run]
omit =
  sphinx_changelog/__init*
  sphinx_changelog/conftest.py
  sphinx_changelog/*setup_package*
  sphinx_changelog/tests/*
  sphinx_changelog/*/tests/*
  sphinx_changelog/extern/*
  sphinx_changelog/version*
  */sphinx_changelog/__init*
  */sphinx_changelog/conftest.py
  */sphinx_changelog/*setup_package*
  */sphinx_changelog/tests/*
  */sphinx_changelog/*/tests/*
  */sphinx_changelog/extern/*
  */sphinx_changelog/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
